--- a/form-templates.html
+++ b/form-templates.html
@@ -100,7 +100,7 @@
 						<div class="header-column">
 							<div class="header-row">
 								<div class="header-logo">
-									<a href="index-2.html"><img alt="Porto" width="100" height="48"
+									<a href="../user/index-2.html"><img alt="Porto" width="100" height="48"
 											data-sticky-width="82" data-sticky-height="40" data-sticky-top="0"
 											src="img/logo-default-slim.png"></a>
 								</div>
@@ -115,29 +115,29 @@
 										<nav class="collapse">
 											<ul class="nav nav-pills" id="mainNav">
 												<li class="dropdown"> <a class="dropdown-item dropdown-toggle"
-														href="index-2.html"> Home </a>
+														href="../user/index-2.html"> Home </a>
 													<ul class="dropdown-menu">
-														<li> <a class="dropdown-item" href="index-2.html"> Landing Page
+														<li> <a class="dropdown-item" href="../user/index-2.html"> Landing Page
 															</a> </li>
-														<li> <a class="dropdown-item" href="index-2.html#demos"> Demos
+														<li> <a class="dropdown-item" href="../user/index-2.html#demos"> Demos
 																<span class="tip tip-dark">hot</span> </a> </li>
 														<li class="dropdown-submenu"> <a class="dropdown-item"
 																href="#">Classic</a>
 															<ul class="dropdown-menu">
 																<li><a class="dropdown-item"
-																		href="index-classic.html">Classic - Original</a>
+																		href="../user/index-classic.html">Classic - Original</a>
 																</li>
 																<li><a class="dropdown-item"
-																		href="index-classic-color.html">Classic -
+																		href="../user/index-classic-color.html">Classic -
 																		Color</a></li>
 																<li><a class="dropdown-item"
-																		href="index-classic-light.html">Classic -
+																		href="../user/index-classic-light.html">Classic -
 																		Light</a></li>
 																<li><a class="dropdown-item"
-																		href="index-classic-video.html">Classic -
+																		href="../user/index-classic-video.html">Classic -
 																		Video</a></li>
 																<li><a class="dropdown-item"
-																		href="index-classic-video-light.html">Classic -
+																		href="../user/index-classic-video-light.html">Classic -
 																		Video - Light</a></li>
 															</ul>
 														</li>
@@ -145,36 +145,36 @@
 																href="#">Corporate</a>
 															<ul class="dropdown-menu">
 																<li><a class="dropdown-item"
-																		href="index-corporate.html">Corporate - Version
+																		href="../user/index-corporate.html">Corporate - Version
 																		1</a></li>
 																<li><a class="dropdown-item"
-																		href="index-corporate-2.html">Corporate -
+																		href="../user/index-corporate-2.html">Corporate -
 																		Version 2</a></li>
 																<li><a class="dropdown-item"
-																		href="index-corporate-3.html">Corporate -
+																		href="../user/index-corporate-3.html">Corporate -
 																		Version 3</a></li>
 																<li><a class="dropdown-item"
-																		href="index-corporate-4.html">Corporate -
+																		href="../user/index-corporate-4.html">Corporate -
 																		Version 4</a></li>
 																<li><a class="dropdown-item"
-																		href="index-corporate-5.html">Corporate -
+																		href="../user/index-corporate-5.html">Corporate -
 																		Version 5</a></li>
 																<li><a class="dropdown-item"
-																		href="index-corporate-6.html">Corporate -
+																		href="../user/index-corporate-6.html">Corporate -
 																		Version 6</a></li>
 																<li><a class="dropdown-item"
-																		href="index-corporate-7.html">Corporate -
+																		href="../user/index-corporate-7.html">Corporate -
 																		Version 7</a></li>
 																<li><a class="dropdown-item"
-																		href="index-corporate-8.html">Corporate -
+																		href="../user/index-corporate-8.html">Corporate -
 																		Version 8</a></li>
 																<li><a class="dropdown-item"
-																		href="index-corporate-9.html">Corporate -
+																		href="../user/index-corporate-9.html">Corporate -
 																		Version 9</a></li>
 																<li><a class="dropdown-item"
-																		href="index-corporate-10.html" ->Corporate -
+																		href="../user/index-corporate-10.html" ->Corporate -
 																		Version 10</a></li>
-																<li><a class="dropdown-item" href="index-2.html#demos"
+																<li><a class="dropdown-item" href="../user/index-2.html#demos"
 																		->More...</a></li>
 															</ul>
 														</li>
@@ -182,38 +182,38 @@
 																href="#">Portfolio</a>
 															<ul class="dropdown-menu">
 																<li><a class="dropdown-item"
-																		href="index-portfolio.html">Portfolio - Version
+																		href="../user/index-portfolio.html">Portfolio - Version
 																		1</a></li>
 																<li><a class="dropdown-item"
-																		href="index-portfolio-2.html">Portfolio -
+																		href="../user/index-portfolio-2.html">Portfolio -
 																		Version 2</a></li>
 																<li><a class="dropdown-item"
-																		href="index-portfolio-3.html">Portfolio -
+																		href="../user/index-portfolio-3.html">Portfolio -
 																		Version 3</a></li>
 																<li><a class="dropdown-item"
-																		href="index-portfolio-4.html">Portfolio -
+																		href="../user/index-portfolio-4.html">Portfolio -
 																		Version 4</a></li>
 																<li><a class="dropdown-item"
-																		href="index-portfolio-5.html">Portfolio -
+																		href="../user/index-portfolio-5.html">Portfolio -
 																		Version 5</a></li>
 															</ul>
 														</li>
 														<li class="dropdown-submenu"> <a class="dropdown-item"
 																href="#">Blog</a>
 															<ul class="dropdown-menu">
-																<li><a class="dropdown-item" href="index-blog.html">Blog
+																<li><a class="dropdown-item" href="../user/index-blog.html">Blog
 																		- Version 1</a></li>
 																<li><a class="dropdown-item"
-																		href="index-blog-2.html">Blog - Version 2</a>
+																		href="../user/index-blog-2.html">Blog - Version 2</a>
 																</li>
 																<li><a class="dropdown-item"
-																		href="index-blog-3.html">Blog - Version 3</a>
+																		href="../user/index-blog-3.html">Blog - Version 3</a>
 																</li>
 																<li><a class="dropdown-item"
-																		href="index-blog-4.html">Blog - Version 4</a>
+																		href="../user/index-blog-4.html">Blog - Version 4</a>
 																</li>
 																<li><a class="dropdown-item"
-																		href="index-blog-5.html">Blog - Version 5</a>
+																		href="../user/index-blog-5.html">Blog - Version 5</a>
 																</li>
 															</ul>
 														</li>
@@ -221,7 +221,7 @@
 																href="#">One Page</a>
 															<ul class="dropdown-menu">
 																<li><a class="dropdown-item"
-																		href="index-one-page.html">One Page Original</a>
+																		href="../user/index-one-page.html">One Page Original</a>
 																</li>
 															</ul>
 														</li>
@@ -1293,10 +1293,10 @@
 																href="#">Sliders</a>
 															<ul class="dropdown-menu">
 																<li><a class="dropdown-item"
-																		href="index-slider-revolution.html">Revolution
+																		href="../user/index-slider-revolution.html">Revolution
 																		Slider</a></li>
 																<li><a class="dropdown-item"
-																		href="index-slider-owl.html">Owl Slider</a></li>
+																		href="../user/index-slider-owl.html">Owl Slider</a></li>
 															</ul>
 														</li>
 														<li class="dropdown-submenu"> <a class="dropdown-item"
@@ -3227,7 +3227,7 @@
 		href="https://themeforest.net/checkout/from_item/4106987?license=regular&amp;support=bundle_6month&amp;ref=Okler"
 		target="_blank" data-bs-toggle="tooltip" data-bs-animation="false" data-bs-placement="right"
 		title="Buy Porto"><i class="fas fa-shopping-cart"></i></a>
-	<a class="demos-redirect" href="index-2.html#demos" data-bs-toggle="tooltip" data-bs-animation="false"
+	<a class="demos-redirect" href="../user/index-2.html#demos" data-bs-toggle="tooltip" data-bs-animation="false"
 		data-bs-placement="right" title="Demos"><img src="img/icons/demos-redirect.png" class="img-fluid" /></a>
 
 
